crates/devflow-core/src/snapshots/devflow_core__prompt__tests__full_execute_fix_prompt_pi.snap
---
source: crates/devflow-core/src/prompt.rs
expression: prompt
---
Read and follow the GSD workflow file at $HOME/.pi/agent/gsd-core/workflows/execute-phase.md for phase 47 --auto. The `--auto` flag is part of the workflow invocation and must be preserved verbatim.

## Advisory incremental self-review

After each plan or wave lands, perform a quick, shallow self-check for doc accuracy, leaked data, CI/build correctness, and external-state claims. Record any drift in the working output and continue execution; the authoritative review happens during Ship. This check must not pause execution or request human input.

## Unattended decision checkpoints

When you reach a `decision` checkpoint and no operator is available, resolve it rather than pausing: this run is unattended and nobody is coming. Compare the presented options against the phase goal and constraints, and do not choose an option merely because it is the first option in the list. The GSD workflow being invoked describes selecting the first option; this instruction supersedes that positional procedure for merit-based choices.

An option marked recommended is evidence to weigh, not an automatically decisive answer. In your final message, record the reasoning and comparison that produced the choice: which options you considered and why the chosen one won, not merely a sentence asserting the choice. The final message is the only record of the decision.

This authority never extends to a package-verification checkpoint: do not self-resolve or approve one under any circumstances, and report it instead. A blocking-human gate is human-only, with one exception: if DevFlow resumed you specifically to resolve that gate, resolve it yourself and record your reasoning in your final message; otherwise report it instead. This policy must not pause execution or request human input.

## Completion Protocol (REQUIRED)

When all work is done, your FINAL message must be exactly:

DEVFLOW_RESULT: {"status": "success"}

If something prevents completion:

DEVFLOW_RESULT: {"status": "failed", "reason": "specific explanation"}

DevFlow reads this line to decide whether the stage succeeded. Output nothing after it.
